# QTTranslatePrototype

./: CMakeLists.txt  Translator.cpp  Translator.h  main.cpp
cmake/: TranslationUtils.cmake
translations/: zh_CN.ts  zh_TW.ts
